Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72833

When QTimeEdit is using a locale that has a different format for the am/pm text then it is not possible to change the time via the keyboard

XMLWordPrintable

    • 5aaade8c935caa1add92f61187c0065e34cf7e0e (qt/qtbase/5.13)

      When QTimeEdit is using a locale that has a different format for the am/pm text then it is not possible to change the time via the keyboard directly. This is because it assumes the am/pm text is "am" or "pm" whereas some locales use "a. m." or "p. m.".

      The attached example sets it up to use one of those locales automatically.

        For Gerrit Dashboard: QTBUG-72833
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes